fixed issue with homepage on mobile

--- a/src/styles/textStyles.scss
+++ b/src/styles/textStyles.scss
@@ -9,17 +9,17 @@ h1 {
 
 h2 {
   color: var(--fg);
-  font-family: "Space Mono";
+  font-family: "Space Mono", sans-serif;
   font-size: 40px;
   margin: 0;
   font-weight: 400;
 }
 h3 {
-  color: var(--fg);
-  font-family: "Space Mono";
+  font-family: "Space Mono", sans-serif;
   font-size: 32px;
   margin: 0;
   font-weight: 400;
+  color: var(--fg);
   @media screen and (max-width: 1025px) {
     font-size: 24px;
     @media screen and (max-height: 500px) {
@@ -38,13 +38,19 @@ li,
 label,
 input {
   color: var(--fg);
-  font-family: "Space Mono";
+  font-family: "Space Mono", sans-serif;
   font-size: 12px;
   margin: 0;
   font-weight: 400;
+  @media screen and (max-width: 769px) {
+    font-size: 10px;
+  }
 }
 p.large {
   font-size: 16px;
+  @media screen and (max-width: 769px) {
+    font-size: 12px;
+  }
 }
 .justify {
   text-align: justify;
@@ -88,7 +94,7 @@ h3.pointer {
   font-weight: bold;
 }
 
-.services-home{
+.services-home {
   text-align: right;
   font-size: 12px;
 }
